# Klassenzeit

./: .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  compose.yaml  compose.yml  deny.toml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  e2e-logs.txt  justfile  lighthouse-auth.cjs  lighthouse-logs.txt  lighthouserc.json  mise.toml  pyproject.toml  review-plan.md
backend/: .dockerignore  .env.example  .env.test  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  build.gradle.kts  pyproject.toml  settings.gradle.kts
backend/alembic/: env.py
backend/alembic/versions/: 0c49a790a7cb_subject_color_and_simplify_suitability.py  1064685e0d18_add_subject_preference_columns.py  17f73c6e1a91_lesson_school_classes_join_and_lesson_.py  537023832e66_initial_ping.py  9175c45105fe_add_scheduled_lessons_table.py  aecd2cfdd285_add_scheduling_tables.py  cc82ebf6c624_drop_ping_create_users_and_sessions.py
backend/config/: development.yaml  production.yaml  staging.yaml  test.yaml
backend/config/checkstyle/: checkstyle.xml  suppressions.xml
backend/config/pmd/: ruleset.xml
backend/config/spotbugs/: exclusions.xml
backend/examples/: playground.rs
backend/migration/src/: lib.rs  m20250403_000001_core_tables.rs  m20250403_000002_domain_tables.rs  m20250403_000003_curriculum_entries.rs  m20250405_000001_room_capacity.rs  m20250406_000001_scheduler_settings.rs
backend/src/: app.rs  lib.rs
backend/src/controllers/: auth.rs  classes.rs  curriculum.rs  example_data.rs  import_export.rs  lessons.rs  members.rs  mod.rs  room_suitabilities.rs  room_timeslot_capacities.rs  rooms.rs  scheduler.rs  scheduler_settings.rs  school_years.rs  schools.rs  subjects.rs  teacher_availabilities.rs  teachers.rs  terms.rs  time_slots.rs
backend/src/keycloak/: claims.rs  config.rs  errors.rs  extractors.rs  initializer.rs  jwks.rs  middleware.rs  mod.rs
backend/src/klassenzeit_backend/: __init__.py  cli.py  main.py
backend/src/klassenzeit_backend/auth/: __init__.py  common_passwords.txt  dependencies.py  passwords.py  rate_limit.py  sessions.py
backend/src/klassenzeit_backend/core/: logging.py  settings.py
backend/src/klassenzeit_backend/db/: __init__.py  base.py  engine.py  session.py
backend/src/klassenzeit_backend/scheduling/: __init__.py  solver_io.py  teacher_assignment.py
backend/src/klassenzeit_backend/seed/: __init__.py  demo_grundschule.py  demo_grundschule_dreizuegig.py  demo_grundschule_zweizuegig.py
backend/src/klassenzeit_backend/testing/: __init__.py  mount.py  router.py
backend/src/main/resources/: application.yaml  messages.properties  messages_de.properties  messages_en.properties
backend/src/models/: app_users.rs  curriculum_entries.rs  lessons.rs  mod.rs  room_subject_suitabilities.rs  room_timeslot_capacities.rs  rooms.rs  school_classes.rs  school_memberships.rs  school_years.rs  schools.rs  subjects.rs  teacher_availabilities.rs  teacher_subject_qualifications.rs  teachers.rs  terms.rs  time_slots.rs
backend/src/models/_entities/: app_users.rs  curriculum_entries.rs  lessons.rs  mod.rs  prelude.rs  room_subject_suitabilities.rs  room_timeslot_capacities.rs  rooms.rs  school_classes.rs  school_memberships.rs  school_scheduler_settings.rs  school_years.rs  schools.rs  subjects.rs  teacher_availabilities.rs  teacher_subject_qualifications.rs  teachers.rs  terms.rs  time_slots.rs
backend/src/services/: example_data.rs  mod.rs  scheduler.rs  scheduler_settings.rs
backend/src/workers/: mod.rs  scheduler.rs
backend/tests/: _xdist_db.py  conftest.py  mod.rs  test_health.py  test_http_access_middleware.py  test_main.py  test_xdist_db.py
backend/tests/auth/: conftest.py  test_admin.py  test_cli.py  test_dependencies.py  test_login.py  test_me.py  test_passwords.py  test_rate_limit.py  test_sessions.py
backend/tests/core/: test_logging.py  test_settings.py
backend/tests/db/: test_base.py  test_models.py  test_ping.py
backend/tests/helpers/: jwt.rs
backend/tests/keycloak/: claims.rs
backend/tests/models/: app_users.rs  domain_tables.rs  mod.rs  school_memberships.rs  schools.rs  users.rs
backend/tests/requests/: auth.rs  classes.rs  example_data.rs  import_export.rs  lessons.rs  members.rs  mod.rs  prepare_data.rs  room_suitabilities.rs  rooms.rs  scheduler.rs  scheduler_settings.rs  schools.rs  subjects.rs  teacher_availabilities.rs  teachers.rs  terms.rs  time_slots.rs
backend/tests/scheduling/: conftest.py  test_lessons.py  test_rooms.py  test_schedule_persistence.py  test_schedule_route.py  test_school_classes.py  test_solver_io.py  test_stundentafeln.py  test_subjects.py  test_teacher_assignment.py  test_teachers.py  test_week_schemes.py
backend/tests/seed/: test_demo_grundschule_dreizuegig.py  test_demo_grundschule_dreizuegig_solvability.py  test_demo_grundschule_rollback.py  test_demo_grundschule_shape.py  test_demo_grundschule_solvability.py  test_demo_grundschule_zweizuegig_shape.py  test_demo_grundschule_zweizuegig_solvability.py
backend/tests/testing/: test_mount.py  test_router.py
scheduler/: Cargo.toml
scheduler/benches/: solver_bench.rs
scheduler/src/: constraints.rs  construction.rs  instances.rs  lib.rs  local_search.rs  mapper.rs  planning.rs  types.rs
scheduler/tests/: basic.rs  constraints.rs  construction.rs  incremental.rs  instances.rs  kempe.rs  local_search.rs  proptest_scoring.rs
solver/solver-core/: Cargo.toml
solver/solver-core/benches/: BASELINE.md  percentile.rs  solver_fixtures.rs  solver_grundschule.rs
solver/solver-core/src/: error.rs  ids.rs  index.rs  json.rs  lahc.rs  lib.rs  ordering.rs  score.rs  solve.rs  types.rs  validate.rs
solver/solver-core/tests/: bench_percentile.rs  ffd_solver_outcome.rs  grundschule_smoke.rs  lahc_property.rs  properties.proptest-regressions  properties.rs  proptest_reverse.rs  score_property.rs
solver/solver-core/tests/common/: mod.rs
solver/solver-py/: Cargo.toml  pyproject.toml
solver/solver-py/src/: lib.rs
solver/solver-py/tests/: test_bindings.py  test_multi_class.py
(+1106 files in other folders)
