[workspace]
resolver = "2"
members = ["solver/solver-core", "solver/solver-py"]

[workspace.package]
edition      = "2021"
rust-version = "1.85"

[workspace.dependencies]
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
