[workspace]
resolver = "2"
members = ["solver/solver-core", "solver/solver-py"]

[workspace.package]
edition      = "2021"
rust-version = "1.85"

[workspace.dependencies]
criterion  = "0.8"
proptest   = "1"
rand       = { version = "0.9", default-features = false, features = ["std", "std_rng", "small_rng"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
uuid       = { version = "1", features = ["serde", "v4"] }
