# Root pyproject.toml — declares the uv workspace and shared tool config.
# This is NOT a publishable package; it has no [project] section.

[tool.uv.workspace]
members = ["backend", "solver/solver-py"]

[tool.uv.sources]
klassenzeit-solver = { workspace = true }

# ─── Shared Python tool config ──────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["backend/tests", "solver/solver-py/tests"]
# `importlib` avoids the classic pytest trap where two test dirs that both
# contain `__init__.py` collide under the same `tests` package name.
addopts      = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py313"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.vulture]
min_confidence = 80
paths          = ["backend/src"]

[tool.coverage.run]
source = ["backend/src", "solver/solver-py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
    "vulture>=2.16",
]
