[project]
name = "klassenzeit-backend"
version = "0.1.0"
description = "Klassenzeit HTTP backend (FastAPI) wrapping the Rust solver"
readme = "README.md"
authors = [
    { name = "Spycner", email = "pascal98kraus@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "fastapi[standard]>=0.135.3",
    "klassenzeit-solver",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.35",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
klassenzeit-solver = { workspace = true }
