[package]
name = "klassenzeit-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4"] }
bitvec = "1"
rand = { version = "0.8", features = ["small_rng"] }
smallvec = "1"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "solver_bench"
harness = false
