[package]
name         = "solver-core"
version      = "0.1.0"
publish      = false
edition.workspace      = true
rust-version.workspace = true

[lib]
# default rlib

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }

[[bench]]
name    = "solver_fixtures"
harness = false
