[package]
name    = "solver-py"
version = "0.1.0"
edition.workspace      = true
rust-version.workspace = true

[lib]
name       = "klassenzeit_solver"
crate-type = ["cdylib"]

[dependencies]
solver-core = { path = "../solver-core" }
pyo3        = { version = "0.22", features = ["extension-module"] }
