[package]
name    = "solver-py"
version = "0.1.0"
publish = false
edition.workspace      = true
rust-version.workspace = true

[lib]
name       = "klassenzeit_solver"
crate-type = ["cdylib"]

[dependencies]
solver-core = { path = "../solver-core", version = "0.1.0" }
pyo3        = { version = "0.28", features = ["extension-module"] }
