[build-system]
requires      = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name            = "klassenzeit-solver"
version         = "0.1.0"
requires-python = ">=3.13"
description     = "PyO3 bindings for the Klassenzeit solver"

[tool.maturin]
module-name   = "klassenzeit_solver._rust"
python-source = "python"
features      = ["pyo3/extension-module"]
